# RT-accompanimentV2

./: .gitignore  DROP_ACC.md  PianoDataset.py  RT_Accompaniment_Technical_Doc.md  Token2Midi.py  config.py  filter_by_length.py  get_length.py  inference.py  instruction.md  main.py  model.py  my_tokenizer.py  pyproject.toml  train.py  trainer.py  方法论分析文档.md  架构说明.md
eval/: README.md  compute_midi_metrics.py
playing_mode/: ANALYSIS.md  DESIGN.md  EXTENSIONS.md  __init__.py
playing_mode/labelers/: __init__.py  base.py  music_theory.py  nll_based.py  noise.py  weak_model.py
playing_mode/predictors/: __init__.py  aux_head.py  base.py  separate_model.py
