[project]
name = "rt-accompaniment"
version = "0.1.0"
description = "Real-time piano accompaniment generation based on LLaMA"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "tqdm>=4.66.0",
    "pretty_midi>=0.2.10",
]

# ---------------------------------------------------------------------------
# PyTorch 来源：Linux 训练机用 cu121，Windows 本地开发用 PyPI CPU 版
# 训练机 CUDA 版本覆盖：12.1 / 12.4 / 12.7 / 13.x   均可用 cu121
# 如果训练机只有 CUDA 11.8，请将 pytorch-cuda 的 url 改为:
#   https://download.pytorch.org/whl/cu118
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
