[project]
name = "rt-accompanimentv2"
version = "0.1.0"
description = "Real-time piano accompaniment generation (Beat-Marker V2)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "accelerate>=1.4.0",
    "safetensors>=0.5.0",
    "numpy>=2.0.0",
    "tqdm>=4.67.0",
    "pretty_midi>=0.2.10",
    "tensorboard>=2.20.0",
]

# PyTorch uses a dedicated index for CUDA builds; uv resolves other packages
# from PyPI normally and only fetches torch/torchvision from the cu126 index.
[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
